--- a/Public/index.html
+++ b/Public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -68,7 +68,7 @@
         <li><a class="navs" href="#section3">About us</a></li>
         <li> <a class="navs" href="#section5">Services</a></li>
         <li><a class="navs" href="#section6">FaQ's</a></li>
-       <li><a class="navs" href="Contact.html"> Contact us</a></li>
+       <li><a class="navs" href="contact.html"> Contact us</a></li>
       </ul>
     </nav>
     <div class="logins-section">
@@ -103,7 +103,7 @@
             <li><a class="navs" href="#section3">About us</a></li>
             <li> <a class="navs" href="#section5">Services</a></li>
             <li><a class="navs" href="#section6">FaQ's</a></li>
-           <li><a class="navs" href="Contact.html"> Contact us</a></li>
+           <li><a class="navs" href="contact.html"> Contact us</a></li>
           </ul>
           
         </nav>
@@ -143,7 +143,7 @@
           <li><a class="navs" href="#section3">About us</a></li>
           <li> <a class="navs" href="#section5">Services</a></li>
           <li><a class="navs" href="#section6">FaQ's</a></li>
-         <li><a class="navs" href="Contact.html"> Contact us</a></li>
+         <li><a class="navs" href="contact.html"> Contact us</a></li>
         </ul>
       </div>
       <div class="newlogin">
@@ -163,9 +163,9 @@
           </div>
           <div class="content-div">
             <p class="content-p">BEST DIGITAL BANK</p>
-            <h3 class="content-h">A FUTURE OF BANKING WITH APEXION BANK</h3>
+            <h3 class="content-h">A FUTURE OF BANKING WITH Unlimited funds BANK</h3>
             <p class="content-p2">
-              Bank smarter, not harder with Apexion Bank, manage your finances
+              Bank smarter, not harder with Unlimited funds Bank, manage your finances
               effortlessly with our super intuitive digital platform
             </p>
             <div class="inner-div">
@@ -243,7 +243,7 @@
         </div>
         <div class="flexbox flexboxA">
           <div class=" sec3-boxes">
-            <p class="bold-p">At Apexion bank, we believe that your bank should support your dreams and aspirations. That's why we have developed convenient mortgage solution's to help make your dream of owning your business a reality.</p>
+            <p class="bold-p">At Unlimited funds bank, we believe that your bank should support your dreams and aspirations. That's why we have developed convenient mortgage solution's to help make your dream of owning your business a reality.</p>
             <div class="inner-box">
               <img src="image/dollar-coins.svg" alt="">
               <div>
@@ -444,7 +444,7 @@
               <h6 class="ans2">The scheduled payments features allows you to manage all of your subscriptions or recurring payments in one place. This way, you can view details for every payment, which include the amount, frequency, payment dates etc.</h6>
             </div>
             <div class="qtn3">
-              <p>Can I use Apexion Online Bank when I travel?</p>
+              <p>Can I use Unlimited funds Online Bank when I travel?</p>
               <h6 class="ans3">Yes, you can use yoer UnlimitedSfunds Online Bank from any part of the world.</h6>
             </div>
             <div class="qtn4">
@@ -452,11 +452,11 @@
                <h6 class="ans4">To reset your username/password successfully, you need to have access to the phone number/email linked to your account. If you do not, please update your account information by contacting our help desk from the login feature.</h6>
             </div>
             <div class="qtn5">
-              <p >How do i open Apexion bank account?</p>
+              <p >How do i open Unlimited funds bank account?</p>
               <h6 class="ans5">Click on the signup button, fill out the form by providing the required details. In few seconds account setup will be done.</h6>
             </div>
           </div>
-          <div class="sec6box">
+          <div class="sec6box sec6boximg">
             <button class="btn1"> <img src="image/plus.svg" alt=""></button>
             <button class="btn2"><img src="image/plus.svg" alt=""></button>
             <button class="btn3"><img src="image/plus.svg" alt=""></button>
@@ -470,7 +470,7 @@
         <div class="sec7-flex">
           <div class="sec7-box">
             <h1>Change the way you use your money</h1>
-            <p>Join over million people who choose Apexion for fast and secured future banking.</p>
+            <p>Join over million people who choose Unlimited funds for fast and secured future banking.</p>
             <a class="login" href="login.html">Get Started Now</a>
           </div>
           <div class="sec7-box1"><img src="image/Frame 103.svg" alt=""></div>
@@ -483,7 +483,7 @@
         <div class="footer-flex">
           <div class="footerbox">
             <img src="image/UnlimitedSfunds Bank Ltd..svg" alt="">
-            <p>Making the world a better place through constructive elegant hierarchies. Innovations enabled by Apexion bank results in products that assists workers.</p>
+            <p>Making the world a better place through constructive elegant hierarchies. Innovations enabled by Unlimited funds bank results in products that assists workers.</p>
           </div>
           <div class="footernav">
            <nav>
@@ -509,7 +509,7 @@
           <div class="footernav">
             <nav>
               <h3>Contact Us</h3>
-              <a href="">Email: Info@Apexion Bank.com</a>
+              <a href="">Email: Info@Unlimited funds Bank.com</a>
               <div>
                 <a href=""><img src="image/Brand-Facebook--Streamline-Tabler.svg.svg" alt=""></a>
                 <a href=""><img src="image/Twitter--Streamline-Core-Remix.svg.svg" alt=""></a>
@@ -521,7 +521,7 @@
           </div>
         </div>
         <div class=" copywriter">
-          <p class="p">@2024 Apexion bank - All rights reserved.</p>
+          <p class="p">@2024 Unlimited funds bank - All rights reserved.</p>
           <div class="arrow-up">
             <p>Backto top</p>
             <img src="image/arrow-up.svg" alt="">
