--- a/Public/contact.html
+++ b/Public/contact.html
@@ -48,48 +48,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/jquery-toast-plugin/1.3.2/jquery.toast.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
+
     <link rel="stylesheet" href="conctact.css" />
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-toast-plugin/1.3.2/jquery.toast.min.js"></script>
-
-    <style>
-      swiper-container {
-        width: 100%;
-        height: fit-content;
-        padding: 0;
-        margin: 0;
-        padding-bottom: 40px;
-      }
-
-      swiper-slide {
-        margin: 0;
-        padding: 0;
-        width: 250px;
-        height: 250px;
-        border-radius: 0px 100px 0px 0px;
-        text-align: center;
-        font-size: 18px;
-        background: #fff;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        text-align: left;
-        padding: 10px;
-        background-color: #e0eae8;
-        align-items: center;
-        margin-bottom: 40px;
-        gap: 48px;
-      }
-
-      swiper-slide img {
-        display: block;
-        width: 50px;
-        height: 50px;
-        object-fit: cover;
-      }
-      /* header navbar area */
-    </style>
   </head>
   <body>
     <div class="preloader-activate preloader-active open_tm_preloader">
@@ -107,73 +69,79 @@
       <!-- header area starts -->
 
       <!-- Static Header -->
-      <header class="desktop-header static-header">
-        <div class="header-container">
-          <a href="index.html" class="logo"
-            ><img src="image/Frame 4577.svg" alt=""
-          /></a>
-          <nav class="header-nav">
-            <ul>
-              <li><a class="navs" href="index.html">Home</a></li>
-              <li><a class="navs" href="Contact.html"> Contact us</a></li>
-            </ul>
-          </nav>
-          <div class="logins-section">
-            <ul>
-              <i><a class="navs login" href="login.html">Log in</a></i>
-              <a class="navs signup" href="signup.html">Sign up</a>
-            </ul>
+        <!-- Static Header -->
+     <header  class="static-header">
+      <div class="header-container">
+       <a href="index.html" class="logo"><img src="image/Frame 4577.svg" alt="" /></a>
+       <nav class="header-nav">
+         <ul>
+           <li><a class="navs" href="index.html">Home</a></li>
+           <li><a class="navs" href="#section3">About us</a></li>
+           <li> <a class="navs" href="#section5">Services</a></li>
+           <li><a class="navs" href="#section6">FaQ's</a></li>
+          <li><a class="navs" href="contact.html"> Contact us</a></li>
+         </ul>
+       </nav>
+       <div class="logins-section">
+         <ul>
+           <i><a class="navs login" href="login.html">Log in</a></i>
+           <a class="navs signup" href="signup.html">Sign up</a>
+         </ul>
+       </div>
+     </div>
+       <!-- mobile view -->
+     <div class="mobile-view">
+       <div class="mobile-logo">
+         <img src="image/Frame 4579.svg" alt="">
+         </div>
+         <div class="nav-box">
+           <div class="nav-container">
+             <img src="image/container.svg" alt="">
+           </div>
+           <div class="signup-container">
+             <img src="image/Icon.svg" alt="">
+           </div>
+         </div>
+      </div>
+        </header>
+    
+        <header class="fixed-header hidden">
+          <div class="header-container">
+           <a id="logo" href="index.html"><img src="image/Frame 4577.svg" alt="" /></a>
+           <nav class="header-nav">
+             <ul>
+               <li><a class="navs" href="index.html">Home</a></li>
+               <li><a class="navs" href="#section3">About us</a></li>
+               <li> <a class="navs" href="#section5">Services</a></li>
+               <li><a class="navs" href="#section6">FaQ's</a></li>
+              <li><a class="navs" href="contact.html"> Contact us</a></li>
+             </ul>
+             
+           </nav>
+           <div class="logins-section">
+             <ul>
+               <i><a class="navs login" href="login.html">Log in</a></i>
+               <a class="navs signup" href="signup.html">Sign up</a>
+             </ul>
+           </div>
           </div>
-        </div>
-      </header>
-
-      <header class="desktop-header fixed-header hidden">
-        <div class="header-container">
-          <a id="logo" href="index.html"
-            ><img src="image/Frame 4577.svg" alt=""
-          /></a>
-          <nav class="header-nav">
-            <ul>
-              <li><a class="navs" href="index.html">Home</a></li>
-              <li><a class="navs" href="Contact.html"> Contact us</a></li>
-            </ul>
-          </nav>
-          <div class="logins-section">
-            <ul>
-              <i><a class="navs login" href="login.html">Log in</a></i>
-              <a class="navs signup" href="signup.html">Sign up</a>
-            </ul>
+           <!-- mobile view -->
+          <div class="mobile-view">
+       <div class="mobile-logo">
+         <img src="image/Frame 4579.svg" alt="">
+         </div>
+         <div class="nav-box">
+           <div class="nav-container">
+             <img src="image/container.svg" alt="">
+           </div>
+           <div class="signup-container">
+             <img src="image/Icon.svg" alt="">
+           </div>
+         </div>
           </div>
-        </div>
-      </header>
+        </header>
 
       <!-- mobile view header -->
-      <header class="mobile-header static-header">
-        <div class="mobile-logo">
-          <img src="image/Frame 4579.svg" alt="" />
-        </div>
-        <div id="nav-box">
-          <div id="nav-container">
-            <img src="image/container.svg" alt="" />
-          </div>
-          <div id="signup-container">
-            <img src="image/Icon.svg" alt="" />
-          </div>
-        </div>
-      </header>
-      <header class="mobile-header fixed-header hidden">
-        <div class="mobile-logo">
-          <img src="image/Frame 4579.svg" alt="" />
-        </div>
-        <div id="nav-box">
-          <div id="nav-container">
-            <img src="image/container.svg" alt="" />
-          </div>
-          <div id="signup-container">
-            <img src="image/Icon.svg" alt="" />
-          </div>
-        </div>
-      </header>
       <div class="navbar">
         <div class="drop-logo">
           <img src="image/Frame 4579.svg" alt="" />
