--- a/Public/admin.html
+++ b/Public/admin.html
@@ -61,7 +61,7 @@
               <img src="image/adminlogo.svg" alt="" />
               <div class="adminProfile">
                 <button class="sidebar-button">
-                  <img src="image/Icon2.svg" alt="" />
+                  <img src="image/Icon-drop.svg" alt="" />
                 </button>
                 <img src="image/Avatar.svg" alt="" />
               </div>
